side panel fixes + english provinces